--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,14 @@
         </dependency>-->
         <dependency>
             <groupId>richtercloud</groupId>
-            <artifactId>document-scanner</artifactId>
+            <artifactId>document-scanner-ifaces</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
             <type>jar</type>
         </dependency>
     </dependencies>
