changed to DockingFrames 1.1.2-SNAPSHOT and added snaptshot repository in order to allow building on travis-ci.org without adding DockingFrames to document-scanner-aggregator

--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,29 @@
     </parent>
     <artifactId>document-scanner-docking-frames</artifactId>
     <packaging>jar</packaging>
+    <repositories>
+        <repository>
+            <id>sonatype-oss-snapshots</id>
+            <name>Sonatype OSS Maven Repository for Staging Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+            <!-- provides 1.1.2-SNAPSHOT which provides
+                     MultipleCDockable.setLocationsAside(MultipleCDockable) -->
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.dockingframes</groupId>
             <artifactId>docking-frames-common</artifactId>
-            <version>1.1.2-P18a</version>
+            <version>1.1.2-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-        <!--<dependency>
-            <groupId>org.dockingframes</groupId>
-            <artifactId>docking-frames-common</artifactId>
-            <version>1.1.2-P18a</version><! 1.1.2-SNAPSHOT pointing to 1.1.2p16a-3-gf1bddbd causes
-            java.lang.IllegalStateException: During an operation the framework attempted to acquire the same lock twice. There are two possible explanations:
-1. In a multi-threaded application one or both operations are not executed in the EventDispatchThread, or
-2. The operations are calling each other, which should not happen. >
-            <type>jar</type>
-        </dependency>-->
+            <!-- see repository comment for version choice -->
         <dependency>
             <groupId>richtercloud</groupId>
             <artifactId>document-scanner-ifaces</artifactId>
