--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>richtercloud</groupId>
         <artifactId>document-scanner-aggregator</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-beta</version>
     </parent>
     <artifactId>document-scanner-docking-frames</artifactId>
     <packaging>jar</packaging>
@@ -24,6 +24,14 @@
                      MultipleCDockable.setLocationsAside(MultipleCDockable) -->
     </repositories>
     <dependencies>
+        <!-- document-scanner dependencies -->
+        <dependency>
+            <groupId>richtercloud</groupId>
+            <artifactId>document-scanner-ifaces</artifactId>
+            <version>1.0-beta</version>
+            <type>jar</type>
+        </dependency>
+        <!-- Other dependencies -->
         <dependency>
             <groupId>org.dockingframes</groupId>
             <artifactId>docking-frames-common</artifactId>
@@ -31,12 +39,6 @@
             <type>jar</type>
         </dependency>
             <!-- see repository comment for version choice -->
-        <dependency>
-            <groupId>richtercloud</groupId>
-            <artifactId>document-scanner-ifaces</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
