--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
     <parent>
         <groupId>richtercloud</groupId>
         <artifactId>document-scanner-aggregator</artifactId>
-        <version>1.0-beta</version>
+        <version>1.0-beta2</version>
     </parent>
     <artifactId>document-scanner-docking-frames</artifactId>
+    <version>1.0-beta</version>
     <packaging>jar</packaging>
     <repositories>
         <repository>
@@ -28,7 +29,7 @@
         <dependency>
             <groupId>richtercloud</groupId>
             <artifactId>document-scanner-ifaces</artifactId>
-            <version>1.0-beta</version>
+            <version>1.0-beta2</version>
             <type>jar</type>
         </dependency>
         <!-- Other dependencies -->
