--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,14 @@
         <groupId>richtercloud</groupId>
         <artifactId>document-scanner-parent</artifactId>
         <version>1.0-beta4</version>
+        <relativePath>..</relativePath>
     </parent>
     <artifactId>document-scanner-docking-frames</artifactId>
     <version>1.0-beta</version>
     <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <repositories>
         <repository>
             <id>sonatype-oss-snapshots</id>
